margin fix on mobile view port
fix

--- a/css/projects.css
+++ b/css/projects.css
@@ -90,7 +90,7 @@ h2{
 }
 
 .pro1{
-	margin: 100px;
+	margin: 80px;
 	width: 200px;
 	height: 200px;
 	background-color: gray;
@@ -98,7 +98,7 @@ h2{
 }
 
 .pro2{
-	margin: 100px;
+	margin: 80px;
 	width: 200px;
 	height: 200px;
 	background-color: gray;
@@ -106,7 +106,7 @@ h2{
 }
 
 .pro3{
-	margin: 100px;
+	margin: 80px;
 	width: 200px;
 	height: 200px;
 	background-color: gray;
